--- a/Penn State Search/en.lproj/MainStoryboard.storyboard
+++ b/Penn State Search/en.lproj/MainStoryboard.storyboard
@@ -217,8 +217,15 @@
                             <constraint firstItem="UVJ-Pq-dAP" firstAttribute="bottom" secondItem="oBn-pD-kDR" secondAttribute="bottom" type="default" id="ar9-Mk-bUb"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Search" id="pnx-kT-VJz"/>
+                    <navigationItem key="navigationItem" title="Search" id="pnx-kT-VJz">
+                        <barButtonItem key="rightBarButtonItem" title="Item" id="Q72-u6-XJH">
+                            <connections>
+                                <segue destination="Lg8-7J-lEb" kind="modal" identifier="PreferencesSegue" modalTransitionStyle="flipHorizontal" id="Wxc-zO-i5n"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="settingsButton" destination="Q72-u6-XJH" id="eRl-OO-szx"/>
                         <outlet property="tableView" destination="UVJ-Pq-dAP" id="Rnr-DL-xe9"/>
                         <segue destination="PL1-wY-f3K" kind="push" identifier="BuildingImageSegue" id="8ox-fB-nxn"/>
                     </connections>
@@ -226,6 +233,68 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ks8-Db-olH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-646" y="-380"/>
+        </scene>
+        <!--Preferences View Controller - Settings-->
+        <scene sceneID="sSu-BI-N4w">
+            <objects>
+                <viewController id="Lg8-7J-lEb" customClass="PreferencesViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FIT-jG-3en">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xY5-MU-KYX"/>
+                            <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jmV-vn-X2N"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Allow Zooming" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBs-dd-FCU">
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Show Buildings Without Images" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="146" translatesAutoresizingMaskIntoConstraints="NO" id="ByB-0p-DYY">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="00F-qa-nxH"/>
+                                    <constraint firstAttribute="width" constant="146" id="WLi-RZ-3gL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfn-33-LUz">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Dismiss">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="dismissPressed:" destination="Lg8-7J-lEb" eventType="touchUpInside" id="keo-mq-Xhx"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jmV-vn-X2N" firstAttribute="leading" secondItem="ByB-0p-DYY" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="1lo-ek-GO0"/>
+                            <constraint firstItem="dfn-33-LUz" firstAttribute="trailing" secondItem="ByB-0p-DYY" secondAttribute="trailing" type="default" id="Amk-6T-6Ga"/>
+                            <constraint firstItem="xY5-MU-KYX" firstAttribute="top" secondItem="FIT-jG-3en" secondAttribute="top" constant="94" id="DcU-AR-BP5"/>
+                            <constraint firstItem="xY5-MU-KYX" firstAttribute="centerY" secondItem="FBs-dd-FCU" secondAttribute="centerY" type="default" id="FZE-NL-uwf"/>
+                            <constraint firstAttribute="bottom" secondItem="dfn-33-LUz" secondAttribute="bottom" constant="75" id="GJH-3l-e6C"/>
+                            <constraint firstItem="dfn-33-LUz" firstAttribute="centerX" secondItem="FIT-jG-3en" secondAttribute="centerX" type="default" id="Ohp-wT-9Yh"/>
+                            <constraint firstItem="jmV-vn-X2N" firstAttribute="leading" secondItem="xY5-MU-KYX" secondAttribute="leading" type="default" id="Xgw-0D-Ko2"/>
+                            <constraint firstItem="ByB-0p-DYY" firstAttribute="top" secondItem="FIT-jG-3en" secondAttribute="top" constant="173" id="d99-HV-kBL"/>
+                            <constraint firstItem="FBs-dd-FCU" firstAttribute="leading" secondItem="ByB-0p-DYY" secondAttribute="leading" type="default" id="giR-da-aiu"/>
+                            <constraint firstItem="jmV-vn-X2N" firstAttribute="top" secondItem="FIT-jG-3en" secondAttribute="top" constant="209" id="pQI-Ty-PSg"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Settings" id="csF-Uc-ulw"/>
+                    <connections>
+                        <outlet property="showImagesSwitch" destination="jmV-vn-X2N" id="mjI-cQ-X8x"/>
+                        <outlet property="zoomSwitch" destination="xY5-MU-KYX" id="0yF-Nb-GQL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K1m-ix-7Xz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-648" y="334"/>
         </scene>
         <!--Building Image View Controller-->
         <scene sceneID="aky-Vq-ZB4">
@@ -293,7 +362,7 @@
                                         </view>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostalAddressCell" textLabel="r8G-At-hJf" rowHeight="158" style="IBUITableViewCellStyleDefault" id="6l4-bF-fSN">
-                                        <rect key="frame" x="0.0" y="179" width="320" height="159"/>
+                                        <rect key="frame" x="0.0" y="179" width="320" height="158"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="10" y="0.0" width="300" height="157"/>
@@ -400,11 +469,20 @@
         <class className="BuildingViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildingViewController.h"/>
             <relationships>
+                <relationship kind="outlet" name="settingsButton" candidateClass="UIBarButtonItem"/>
                 <relationship kind="outlet" name="tableView" candidateClass="UITableView"/>
             </relationships>
         </class>
         <class className="NSLayoutConstraint" superclassName="NSObject">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PreferencesViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PreferencesViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="dismissPressed:"/>
+                <relationship kind="outlet" name="showImagesSwitch" candidateClass="UISwitch"/>
+                <relationship kind="outlet" name="zoomSwitch" candidateClass="UISwitch"/>
+            </relationships>
         </class>
         <class className="ResultDetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ResultDetailViewController.h"/>
