--- a/Penn State Search/en.lproj/MainStoryboard.storyboard
+++ b/Penn State Search/en.lproj/MainStoryboard.storyboard
@@ -228,6 +228,7 @@
                         <outlet property="settingsButton" destination="Q72-u6-XJH" id="eRl-OO-szx"/>
                         <outlet property="tableView" destination="UVJ-Pq-dAP" id="Rnr-DL-xe9"/>
                         <segue destination="PL1-wY-f3K" kind="push" identifier="BuildingImageSegue" id="8ox-fB-nxn"/>
+                        <segue destination="LGC-BA-PSb" kind="push" identifier="BuildingInfoSegue" id="3vP-Ed-wpN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ks8-Db-olH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -304,6 +305,37 @@
             </objects>
             <point key="canvasLocation" x="-648" y="334"/>
         </scene>
+        <!--Building Info View Controller-->
+        <scene sceneID="x4r-kl-wFP">
+            <objects>
+                <viewController id="LGC-BA-PSb" customClass="BuildingInfoViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ljd-w4-2mp">
+                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Lorem ipsum " translatesAutoresizingMaskIntoConstraints="NO" id="FVw-eS-KSb">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FVw-eS-KSb" firstAttribute="top" secondItem="Ljd-w4-2mp" secondAttribute="top" type="default" id="KwU-id-Som"/>
+                            <constraint firstItem="FVw-eS-KSb" firstAttribute="bottom" secondItem="Ljd-w4-2mp" secondAttribute="bottom" type="default" id="SJm-xt-6RM"/>
+                            <constraint firstItem="FVw-eS-KSb" firstAttribute="trailing" secondItem="Ljd-w4-2mp" secondAttribute="trailing" type="default" id="bto-1c-g1D"/>
+                            <constraint firstItem="FVw-eS-KSb" firstAttribute="leading" secondItem="Ljd-w4-2mp" secondAttribute="leading" type="default" id="u7E-FQ-Dev"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="A98-L1-w7Y"/>
+                    <connections>
+                        <outlet property="infoTextView" destination="FVw-eS-KSb" id="VBd-wy-rG5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sxM-mo-rbh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="13" y="100"/>
+        </scene>
         <!--Building Image View Controller-->
         <scene sceneID="aky-Vq-ZB4">
             <objects>
@@ -329,7 +361,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ot8-Qz-Ha3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-103" y="-380"/>
+            <point key="canvasLocation" x="407" y="-380"/>
         </scene>
         <!--Result Detail View Controller-->
         <scene sceneID="dAz-kP-It7">
@@ -370,13 +402,13 @@
                                         </view>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostalAddressCell" textLabel="r8G-At-hJf" rowHeight="158" style="IBUITableViewCellStyleDefault" id="6l4-bF-fSN">
-                                        <rect key="frame" x="0.0" y="179" width="320" height="159"/>
+                                        <rect key="frame" x="0.0" y="179" width="320" height="158"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="10" y="0.0" width="300" height="157"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="31" translatesAutoresizingMaskIntoConstraints="NO" id="r8G-At-hJf">
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="r8G-At-hJf">
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -472,6 +504,12 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildingImageViewController.h"/>
             <relationships>
                 <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+            </relationships>
+        </class>
+        <class className="BuildingInfoViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/BuildingInfoViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="infoTextView" candidateClass="UITextView"/>
             </relationships>
         </class>
         <class className="BuildingViewController" superclassName="UIViewController">
